--- a/shabad os/AKJ Light.css
+++ b/shabad os/AKJ Light.css
@@ -1,5 +1,6 @@
 :root {
-  /* Example Overlay Theme Config */
+  --zoom: 1;
+  --secondary-scale-factor: 0.6;
 
   /**********/
   /* Layout */
@@ -11,7 +12,7 @@
 
   --overlay-height: inherit; /* Use inherit for automatic height, use 100vh for "full screen" */
 
-  --overlay-vertical-padding: 2vh;
+  --overlay-vertical-padding: calc(2vh * var(--zoom));
 
   --overlay-horizontal-padding: var(--overlay-vertical-padding);
 
@@ -65,7 +66,7 @@
   /* Font */
   /********/
 
-  --overlay-primary-font-size: 2.4333vw; /* 90+% of gurbani lines fit on a single line 16:9 with 4.8vh */
+  --overlay-primary-font-size: calc(2.4333vw * var(--zoom));
 
   --overlay-primary-font-color: #282550; /* Color of gurbani font */
 
@@ -74,8 +75,8 @@
   --overlay-primary-drop-color: none; /* Must be in "R, G, B" format (e.g. "0, 0, 0" without quotes). Color of drop shadow/glow for gurbani font. */
 
   --overlay-secondary-font-size: calc(
-    var(--overlay-primary-font-size) * 0.6
-  ); /* Change the decimal factor to size secondary lines according to gurbani's font size */
+    var(--overlay-primary-font-size) * var(--secondary-scale-factor)
+  );
 
   --overlay-secondary-font-color: #07070099;
 
